--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -170,13 +170,27 @@
           <div class="col-xs-6 col-sm-4 col-md-2">
             <div class="form-group">
               <label for="filter-item-code">Item Code</label>
-              <input ng-model="filterInput.itemCode" ng-model-options="{ updateOn: 'default', debounce: {'default': 300 } }" type="text" class="form-control" id="filter-item-code" placeholder="Search">
+              <input
+                ng-model="filterInput.itemCode"
+                ng-model-options="{ updateOn: 'default', debounce: {'default': 300 } }"
+                type="text"
+                class="form-control"
+                id="filter-item-code"
+                placeholder="Search"
+                ng-change="sortItemsByCategory()">
             </div>
           </div>
           <div class="col-xs-6 col-sm-4 col-md-2">
             <div class="form-group">
               <label for="filter-item-name">Item Name</label>
-              <input ng-model="filterInput.itemName" ng-model-options="{ updateOn: 'default', debounce: {'default': 300 } }" type="text" class="form-control" id="filter-item-name" placeholder="Search">
+              <input
+                ng-model="filterInput.itemName"
+                ng-model-options="{ updateOn: 'default', debounce: {'default': 300 } }"
+                type="text"
+                class="form-control"
+                id="filter-item-name"
+                placeholder="Search"
+                ng-change="sortItemsByCategory()">
             </div>
           </div>
           <div class="col-xs-1">
