--- a/app/views/stock-dashboard.html
+++ b/app/views/stock-dashboard.html
@@ -71,7 +71,7 @@
         <div class="form-group">
           <label>Item Code</label>
           <input ng-model="search.itemCode" type="text" class="form-control" id="filter-item-code" placeholder="Search"
-                 ng-readonly="readOnly"/>
+                 ng-readonly="readOnly" ng-change="sortItemsByCategory()" />
         </div>
       </div>
 
@@ -79,7 +79,7 @@
         <div class="form-group">
           <label>Item Name</label>
           <input ng-model="search.itemName" type="text" class="form-control" id="filter-item-name" placeholder="Search"
-                 ng-readonly="readOnly"/>
+                 ng-readonly="readOnly" ng-change="sortItemsByCategory()"/>
         </div>
       </div>
 
