--- a/app/views/stock-take.html
+++ b/app/views/stock-take.html
@@ -64,13 +64,13 @@
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
                 <label for="filter-item-code">Item Code</label>
-                <input ng-model="filterInput.itemCode" type="text" class="form-control" id="filter-item-code">
+                <input ng-model="filterInput.itemCode" type="text" class="form-control" id="filter-item-code" ng-change="sortItemsByCategory()">
               </div>
             </div>
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
                 <label for="filter-item-name">Item Name</label>
-                <input ng-model="filterInput.itemName" type="text" class="form-control" id="filter-item-name">
+                <input ng-model="filterInput.itemName" type="text" class="form-control" id="filter-item-name" ng-change="sortItemsByCategory()">
               </div>
             </div>
 
