--- a/app/views/stock-take.html
+++ b/app/views/stock-take.html
@@ -64,13 +64,13 @@
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
                 <label for="filter-item-code">Item Code</label>
-                <input ng-model="filterInput.itemCode" type="text" class="form-control" id="filter-item-code" ng-change="sortItemsByCategory()">
+                <input ng-model="filterInput.itemCode" type="text" class="form-control" id="filter-item-code" ng-change="clearDisplayedCategories()">
               </div>
             </div>
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
                 <label for="filter-item-name">Item Name</label>
-                <input ng-model="filterInput.itemName" type="text" class="form-control" id="filter-item-name" ng-change="sortItemsByCategory()">
+                <input ng-model="filterInput.itemName" type="text" class="form-control" id="filter-item-name" ng-change="clearDisplayedCategories()">
               </div>
             </div>
 
@@ -138,7 +138,7 @@
     </error-dialog>
 
     <ng-form name="form" class="form edit-form delivery-note-form">
-      <div ng-repeat="item in cateringStationItems | filter:filterInput track by item.masterItemId">
+      <div ng-repeat="item in cateringStationItems | filter:filterInput | orderBy: ['orderBy', 'itemName'] track by item.masterItemId">
         <div class="well" ng-if="shouldShowCategoryHeader(item)">
           <div class="row">
             <div class="col-xs-12 col-md-12">
