TS5PORTAL-318 - Fix header category issue

--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -176,8 +176,7 @@
                 type="text"
                 class="form-control"
                 id="filter-item-code"
-                placeholder="Search"
-                ng-change="clearDisplayedCategories()">
+                placeholder="Search">
             </div>
           </div>
           <div class="col-xs-6 col-sm-4 col-md-2">
@@ -189,8 +188,7 @@
                 type="text"
                 class="form-control"
                 id="filter-item-name"
-                placeholder="Search"
-                ng-change="clearDisplayedCategories()">
+                placeholder="Search">
             </div>
           </div>
           <div class="col-xs-1">
