--- a/app/views/stock-take.html
+++ b/app/views/stock-take.html
@@ -64,13 +64,13 @@
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
                 <label for="filter-item-code">Item Code</label>
-                <input ng-model="filterInput.itemCode" type="text" class="form-control" id="filter-item-code" ng-change="clearDisplayedCategories()">
+                <input ng-model="filterInput.itemCode" type="text" class="form-control" id="filter-item-code">
               </div>
             </div>
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
                 <label for="filter-item-name">Item Name</label>
-                <input ng-model="filterInput.itemName" type="text" class="form-control" id="filter-item-name" ng-change="clearDisplayedCategories()">
+                <input ng-model="filterInput.itemName" type="text" class="form-control" id="filter-item-name">
               </div>
             </div>
 
@@ -158,7 +158,7 @@
 
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
-                <label for="item-code-{{ $index }}">Item Code</label>
+                <label for="item-code-{{ $index }}">Item Code</label> {{item.salesCategoryId}} {{item.masterItemId}}
                 <input ng-model="item.itemCode" type="text" class="form-control" name="item-code-{{ $index }}" readonly disabled>
               </div>
             </div>
