--- a/app/views/stock-take.html
+++ b/app/views/stock-take.html
@@ -158,7 +158,7 @@
 
             <div class="col-xs-12 col-sm-4">
               <div class="form-group">
-                <label for="item-code-{{ $index }}">Item Code</label> {{item.salesCategoryId}} {{item.masterItemId}}
+                <label for="item-code-{{ $index }}">Item Code</label>
                 <input ng-model="item.itemCode" type="text" class="form-control" name="item-code-{{ $index }}" readonly disabled>
               </div>
             </div>
