--- a/app/views/sales-targets.html
+++ b/app/views/sales-targets.html
@@ -60,8 +60,8 @@
           <div class="col-xs-12 col-sm-2" ng-class="validation.fieldCssClass(salesTargetDataForm, 'salesTargetCategory')">
             <div class="form-group">
               <label for="salesTargetCategory">Category *</label>
-              <ui-select theme="bootstrap" ng-model="salesTarget.category" ng-disabled="isDisabled()" name="salesTargetCategory" id="salesTargetCategory">
-                <ui-select-match placeholder="Category" allow-clear>{{ $select.selected.name }}</ui-select-match>
+              <ui-select theme="bootstrap" required ng-model="salesTarget.category" ng-disabled="isDisabled()" name="salesTargetCategory" id="salesTargetCategory">
+                <ui-select-match placeholder="Category">{{ $select.selected.name }}</ui-select-match>
                 <ui-select-choices repeat="category in salesTargetCategoryList | filter: {name:$select.search} | orderBy: 'name'">
                   <div ng-bind-html="category.name | highlight: $select.search"></div>
                 </ui-select-choices>
@@ -74,6 +74,8 @@
               <input
                 ng-model="salesTarget.value"
                 type="text"
+                custom-validity
+                custom-pattern="number"
                 name="Value"
                 required
                 class="form-control"
@@ -137,7 +139,7 @@
           <div class="col-xs-12 col-sm-12">
             <div class="form-group" ng-class="validation.fieldCssClass(salesTargetDataForm, 'employees')">
               <ui-select name="employees" id="employees" multiple ng-disabled="isDisabled()" ng-model="salesTarget.employees" theme="bootstrap">
-                <ui-select-match placeholder="Select Crew">{{ $item.id }}</ui-select-match>
+                <ui-select-match placeholder="Select Crew">{{ $item.firstName }} {{ $item.lastName }}</ui-select-match>
                 <ui-select-choices repeat="employee in employeeList | filter: $select.search | orderBy:'lastName' | limitTo: 100">
                   <div ng-bind-html="employee.firstName + ' ' + employee.lastName | highlight: $select.search "></div>
                 </ui-select-choices>
@@ -168,7 +170,7 @@
                 </thead>
                 <tbody>
                   <tr ng-repeat="station in salesTarget.stations track by $index">
-                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureStation[$index]')">
+                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureStation[' + $index + ']')">
                       <ui-select name="departureStation[$index]" id="departureStation[$index]" ng-disabled="isDisabled()" ng-model="station.departure" theme="bootstrap">
                         <ui-select-match placeholder="Select Departure Station">{{ $select.selected.code }}</ui-select-match>
                         <ui-select-choices repeat="departureStation in stationList | filter: $select.search | orderBy:'code' | limitTo: 100">
@@ -176,7 +178,7 @@
                         </ui-select-choices>
                       </ui-select>
                     </td>
-                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'arrivalStation[$index]')">
+                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'arrivalStation[' + $index + ']')">
                       <ui-select name="arrivalStation[$index]" id="arrivalStation[$index]" ng-disabled="isDisabled()" ng-model="station.arrival" theme="bootstrap">
                         <ui-select-match placeholder="Select Arrival Station">{{ $select.selected.code }}</ui-select-match>
                         <ui-select-choices repeat="arrivalStation in stationList | filter: $select.search | orderBy:'code' | limitTo: 100">
@@ -218,23 +220,25 @@
                 </thead>
                 <tbody>
                   <tr ng-repeat="departureTime in salesTarget.departureTimes track by $index">
-                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureTimeFrom[$index]')">
+                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureTimeFrom[' + $index + ']')">
                       <input
+                        maxlength="5"
                         ng-model="departureTime.from"
-                        maxlength="4"
-                        oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                        oninput="this.value=this.value.replace(/[^0-9:]/g,'');"
                         class="form-control"
                         name="departureTimeFrom[$index]"
-                        id="departureTimeFrom[$index]">
+                        id="departureTimeFrom[$index]"
+                        ng-pattern="regexp.t24">
                     </td>
-                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureTimeTo[$index]')">
+                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureTimeTo[' + $index + ']')">
                       <input
+                        maxlength="5"
                         ng-model="departureTime.to"
-                        maxlength="4"
-                        oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                        oninput="this.value=this.value.replace(/[^0-9:]/g,'');"
                         class="form-control"
                         name="departureTimeTo[$index]"
-                        id="departureTimeTo[$index]">
+                        id="departureTimeTo[$index]"
+                        ng-pattern="regexp.t24">
                     </td>
                     <td ng-if="!isDisabled()" style="text-align: center">
                       <button class="btn btn-danger btn-xs" ng-click="removeDepartureTime($index)">
@@ -271,7 +275,7 @@
                 </thead>
                 <tbody>
                   <tr ng-repeat="departureDate in salesTarget.departureDates track by $index">
-                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureDateFrom[$index]')">
+                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureDateFrom[' + $index + ']')">
                       <date-picker-field
                         form="salesTargetDataForm"
                         name="departureDateFrom[$index]"
@@ -280,7 +284,7 @@
                         ng-model="departureDate.from">
                       </date-picker-field>
                     </td>
-                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureDateTo[$index]')">
+                    <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'departureDateTo[' + $index + ']')">
                       <date-picker-field
                         form="salesTargetDataTo"
                         name="departureDateTo[$index]"
@@ -323,7 +327,7 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="itemCategory in salesTarget.itemCategories track by $index">
-                  <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'itemCategory[$index]')">
+                  <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'itemCategory[' + $index + ']')">
                     <ui-select name="itemCategory[$index]" id="itemCategory[$index]" ng-disabled="isDisabled()" ng-model="itemCategory.value" theme="bootstrap">
                       <ui-select-match placeholder="Select Item Category">{{ $select.selected.name }}</ui-select-match>
                       <ui-select-choices repeat="category in itemCategoryList | filter: $select.search | orderBy:'orderBy' | limitTo: 100">
@@ -365,7 +369,7 @@
                 </thead>
                 <tbody>
                 <tr ng-repeat="item in salesTarget.items track by $index">
-                  <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'item[$index]')">
+                  <td ng-class="validation.fieldCssClass(salesTargetDataForm, 'item[' + $index + ']')">
                     <ui-select name="item[$index]" id="item[$index]" ng-disabled="isDisabled()" ng-model="item.value" theme="bootstrap">
                       <ui-select-match placeholder="Select Item">{{ $select.selected.itemName }}</ui-select-match>
                       <ui-select-choices repeat="i in itemList | filter: $select.search | orderBy:'name' | limitTo: 100">
